# rebabel-format

./: .gitignore  Architecture.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  nlp_pos.txt  out.flextext  pyproject.toml  rebabel_import_and_export_testing.py  setup.cfg  tau_T_pos.input  tau_T_pos.output  two_file_nlp_test.py
.github/workflows/: test.yaml
docs/: README.md  manipulating.md  parameters.md  plugins.md  processes.md  query.md  readers.md  writers.md
rebabel_format/: __init__.py  concordance.py  config.py  db.py  parameters.py  process.py  query.py  reader.py  schema.sql  sfm_test.toml  transform.py  utils.py  writer.py
rebabel_format/converters/: __init__.py  conllu.md  conllu.py  csv.md  csv.py  elan.py  flextext.py  macula.py  nlp_part_of_speech.py  nlp_simple_pos.py  nlp_two_file_part_of_speech.py  nlp_two_file_pos.py  reader.py  sfm.py  textfabric.py  writer.py
rebabel_format/processes/: __init__.py  concordance.py  conditional_probability.py  distribution.py  export.py  importer.py  inspect.py  parameters.py  process.py  query.py  transform.py
rebabel_format/test/: __init__.py
rebabel_format/test/data/: basic.conllu.nlp_apertium.txt  dictionary.csv  merge_pos.flextext  merge_text.flextext  nlp_pos_file.txt
rebabel_format/test/static/: basic_conllu.01.inspect.txt  basic_conllu.02.query.txt  basic_conllu.04.query.txt  basic_conllu.05.export.txt  basic_conllu.06.concordance.txt  basic_conllu.toml  combinedNLP2flextext.01.export.txt  combinedNLP2flextext.toml  conllu2csv.01.export.txt  conllu2csv.toml  conllu2flextext.01.export.txt  (+17 more)
(+4 files in other folders)
