[metadata]
name = rebabel_format
version = 0.0.1
description = processing of reBabel linguistic annotation files
long_description = file: README.md
long_description_content_type = text/markdown
keywords = annotation, format, linguistics
license = MIT
license_files = LICENSE
author = Daniel Swanson
author_email = rebabel@dangswan.com
home_page = https://github.com/mr-martian/rebabel-format

[options]
install_requires =
  tomli >= 1.1.0 ; python_version < "3.11"
  importlib_metadata >= 3.6 ; python_version < "3.10"
  importlib_resources >= 1.4 ; python_version < "3.9"

[options.entry_points]
console_scripts =
  rebabel-format = rebabel_format:main
